[package]
name = "vault-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.5", features = ["rand", "rand-std"] }
env_logger = "0.11.6"
log = "0.4.25"
sqlite = "0.36.1"
thiserror = "2.0.11"

[dev-dependencies]
serial_test = "3.1.1"

[lib]
name = "vault_indexer"
path = "src/lib.rs"

[[bin]]
name = "vault-indexer"
path = "src/main.rs"
