[package]
name = "vault-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.5", features = ["rand", "rand-std"] }
bus = "2.4.1"
clap = { version = "4.5.27", features = ["derive"] }
env = "1.0.1"
env_logger = "0.11.6"
log = "0.4.25"
rusqlite = "0.33.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
websocket = { version = "0.27.1", default-features = false, features = [
    "sync",
    "sync-ssl",
] }
hex = "0.4.3"

[dev-dependencies]
serial_test = "3.1.1"

[lib]
name = "vault_indexer"
path = "src/lib.rs"

[[bin]]
name = "vault-indexer"
path = "src/main.rs"
